// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should Catalog render correctly with load more button 1`] = `
<div>
  <section
    class="catalog"
  >
    <h2
      class="catalog__title visually-hidden"
    >
      Catalog
    </h2>
    <ul
      class="catalog__genres-list"
    >
      <li
        class="catalog__genres-item catalog__genres-item--active"
      >
        <a
          class="catalog__genres-link"
          href="#"
        >
          All genres
        </a>
      </li>
      <li
        class="catalog__genres-item "
      >
        <a
          class="catalog__genres-link"
          href="#"
        >
          Drama
        </a>
      </li>
    </ul>
    <div
      class="catalog__movies-list"
    >
      <article
        class="small-movie-card catalog__movies-card"
      >
        <a
          class="small-movie-card__link"
          href="/films/0"
        >
          <div
            class="small-movie-card__image"
          >
            PlayerComponent
          </div>
          <h3
            class="small-movie-card__title"
          >
            Macbeth
          </h3>
        </a>
      </article>
      <article
        class="small-movie-card catalog__movies-card"
      >
        <a
          class="small-movie-card__link"
          href="/films/1"
        >
          <div
            class="small-movie-card__image"
          >
            PlayerComponent
          </div>
          <h3
            class="small-movie-card__title"
          >
            Macbeth
          </h3>
        </a>
      </article>
      <article
        class="small-movie-card catalog__movies-card"
      >
        <a
          class="small-movie-card__link"
          href="/films/2"
        >
          <div
            class="small-movie-card__image"
          >
            PlayerComponent
          </div>
          <h3
            class="small-movie-card__title"
          >
            Macbeth
          </h3>
        </a>
      </article>
      <article
        class="small-movie-card catalog__movies-card"
      >
        <a
          class="small-movie-card__link"
          href="/films/3"
        >
          <div
            class="small-movie-card__image"
          >
            PlayerComponent
          </div>
          <h3
            class="small-movie-card__title"
          >
            Macbeth
          </h3>
        </a>
      </article>
      <article
        class="small-movie-card catalog__movies-card"
      >
        <a
          class="small-movie-card__link"
          href="/films/4"
        >
          <div
            class="small-movie-card__image"
          >
            PlayerComponent
          </div>
          <h3
            class="small-movie-card__title"
          >
            Macbeth
          </h3>
        </a>
      </article>
      <article
        class="small-movie-card catalog__movies-card"
      >
        <a
          class="small-movie-card__link"
          href="/films/5"
        >
          <div
            class="small-movie-card__image"
          >
            PlayerComponent
          </div>
          <h3
            class="small-movie-card__title"
          >
            Macbeth
          </h3>
        </a>
      </article>
      <article
        class="small-movie-card catalog__movies-card"
      >
        <a
          class="small-movie-card__link"
          href="/films/6"
        >
          <div
            class="small-movie-card__image"
          >
            PlayerComponent
          </div>
          <h3
            class="small-movie-card__title"
          >
            Macbeth
          </h3>
        </a>
      </article>
      <article
        class="small-movie-card catalog__movies-card"
      >
        <a
          class="small-movie-card__link"
          href="/films/7"
        >
          <div
            class="small-movie-card__image"
          >
            PlayerComponent
          </div>
          <h3
            class="small-movie-card__title"
          >
            Macbeth
          </h3>
        </a>
      </article>
    </div>
    <div
      class="catalog__more"
    >
      <button
        class="catalog__button"
        type="button"
      >
        Show more
      </button>
    </div>
  </section>
</div>
`;

exports[`Should Catalog render correctly without load more button 1`] = `
<div>
  <section
    class="catalog"
  >
    <h2
      class="catalog__title visually-hidden"
    >
      Catalog
    </h2>
    <ul
      class="catalog__genres-list"
    >
      <li
        class="catalog__genres-item catalog__genres-item--active"
      >
        <a
          class="catalog__genres-link"
          href="#"
        >
          All genres
        </a>
      </li>
      <li
        class="catalog__genres-item "
      >
        <a
          class="catalog__genres-link"
          href="#"
        >
          Drama
        </a>
      </li>
    </ul>
    <div
      class="catalog__movies-list"
    >
      <article
        class="small-movie-card catalog__movies-card"
      >
        <a
          class="small-movie-card__link"
          href="/films/1"
        >
          <div
            class="small-movie-card__image"
          >
            PlayerComponent
          </div>
          <h3
            class="small-movie-card__title"
          >
            Macbeth
          </h3>
        </a>
      </article>
    </div>
  </section>
</div>
`;
